# Erasmus

./: CMakeLists.txt  Erasmus.cpp  IScopePX14.h  MainWindow.Alazar.cpp  MainWindow.Alazar.h  MainWindow.Doppler.cpp  MainWindow.Doppler.h  MainWindow.Rodent.cpp  MainWindow.Rodent.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  OFDIProcessViewer.cpp  QPictureBox.h  QScopeControl.cpp  README.txt  stdafx.h
AlazarDAQ/: AcqToDisk.cpp  AcqToDisk.sln  AcqToDisk.vcxproj  AcqToDisk.vcxproj.filters  AlazarDAQ.cpp  AlazarDAQ.h  AlazarProcess.m  CMakeLists.txt  test.cpp  testcase_alazar.data
DataAcquisition/: Calibration.cpp  Calibration.h  CameraCapture.cpp  CameraCapture.h  ConfigurationFile.cpp  ConfigurationFile.h  DataAcquisition.cpp  DataAcquisition.h  DataBufferModel.cpp  DataBufferModel.h  DataRecording.cpp  DataRecording.h  MemoryManager.cpp  MemoryManager.h  RecordResultView.cpp  RecordResultView.h  ZabberStage.cpp  ZabberStage.h
Erasmus/: CMakeLists.txt  MainWindow.Alazar.cpp  OFDIProcessViewer.h  QPictureBox.cpp  QScopeControl.h
NIDAQ/: AnalogOutput.cpp  AnalogOutput.h  AnalogOutput2.cpp  AnalogOutput2.h  CMakeLists.txt  NIDAQmx.h  test.cpp
OFDIProcess3/: AlazarProcess.cpp  AlazarProcess.h  ImageProcess.cpp  ImageProcess.h  IntensityProcess.cpp  IntensityProcess.h  OFDI.cpp  OFDI.h  test.cpp
SignatecDAQ/: CMakeLists.txt  SignatecDAQ.cpp  SignatecDAQ.h  test.cpp  testFileSave.cpp
numcpp/: CMakeLists.txt  README.md  catch.hpp  config.h.in  numcpp.cpp  test.cpp  test.old.cpp
numcpp/example/: circularize.cpp  circularize.h  circularize.m
numcpp/numcpp/: allocator.h  array.h  array.test.cpp  array_functions.h  base_array.h  base_array.test.cpp  gpu_array.h  gpu_array.test.cpp  opencv.h  opencv.test.cpp  test_cuda_kernel.cu
objcpp/: object.h  property.h  signal.h  ui.h
